@@ -15,6 +15,8 @@ share = share
 
 [ShareDir]
 
+[Author::KENTNL::CONTRIBUTING]
+
 [MetaConfig / @Author::KENTNL/MetaConfig]
 
 [GithubMeta / @Author::KENTNL/GithubMeta]
@@ -40,8 +42,10 @@ order_by = name
 exclude_filename = README
 exclude_filename = README.mkdn
 exclude_filename = README.pod
+exclude_filename = CONTRIBUTING.mkdn
 exclude_filename = LICENSE
 exclude_filename = Makefile.PL
+exclude_filename = CONTRIBUTING.pod
 include_dotfiles = 1
 
 [License / @Author::KENTNL/License]
@@ -58,6 +62,7 @@ include_dotfiles = 1
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
 copy = Makefile.PL
+copy = CONTRIBUTING.pod
 
 [MetaTests / @Author::KENTNL/MetaTests]
 
@@ -93,7 +98,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.024002
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025000
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -137,6 +142,7 @@ tag_format = %v-source
 
 [Git::NextRelease / @Author::KENTNL/Git::NextRelease]
 :version = 0.004000
+default_branch = master
 format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
@@ -176,6 +182,8 @@ applyto_map = develop.suggests = develop.suggests
 applyto_phase = develop
 modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
+
+[RemovePrereqs::Provided / @Author::KENTNL/RemovePrereqs::Provided]
 
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
 ; twitter_extra_hash_tags =
@@ -217,6 +225,7 @@ Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Prereqs::Upgrade = 0
 Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
+Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
@@ -229,8 +238,6 @@ Dist::Zilla::Plugin::Test::ReportPrereqs = 0
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
-
-[Author::KENTNL::CONTRIBUTING]
 
 [RemovePrereqs::Provided]
 
