@@ -13,6 +13,8 @@ share = share
 
 [ShareDir]
 
+[Author::KENTNL::CONTRIBUTING]
+
 [@Author::KENTNL]
 :version          = 2.024002
 normal_form       = numify
@@ -22,11 +24,12 @@ toolkit_hardness  = soft
 bumpversions      = 1
 copyfiles         = LICENSE
 copyfiles         = Makefile.PL
+copyfiles         = CONTRIBUTING.pod
 srcreadme         = mkdn
+-remove  = Author::KENTNL::CONTRIBUTING
 ; twitter_extra_hash_tags =
 ; auto_prereqs_skip = File::Find
 
-[Author::KENTNL::CONTRIBUTING]
 
 [RemovePrereqs::Provided]
 
