@@ -1,6 +1,22 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.001003
+ [Added / runtime requires]
+ - Dist::Zilla::Plugin::GenerateFile::ShareDir
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.024002 → 2.025000
+
+ [Removed / runtime recommends]
+ - Path::Tiny 0.058
+
+ [Removed / runtime requires]
+ - Carp
+ - Dist::Zilla::Role::AfterBuild
+ - File::ShareDir
+ - Path::Tiny
+ - Pod::Markdown 2.000
+ - Pod::Text
 
 0.001002 2015-06-30T02:08:26Z
  [Added / configure recommends]
