@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001003
+ [Removed / runtime recommends]
+ - Path::Tiny 0.058
 
 0.001002 2015-06-30T02:08:26Z
  [Added / configure recommends]
